# anim

./: .coverage  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  stop.sh
anim/: __init__.py  cli.py
anim/agents/: __init__.py  analyzer.py  animator.py  architect.py  base.py  director.py  exporter.py  judge.py  orchestrator.py  researcher.py  studio_controller.py  svg_validator.py  validators.py  workflow_generator.py
anim/blueprint/: __init__.py  parser.py  schema.py
anim/input/: __init__.py  extractor.py
anim/renderer/: __init__.py  orchestrator.py  scene_builder.py
anim/storage/: __init__.py  store.py
anim/web/: __init__.py  app.py  run.py
anim/web/services/: gemini_service.py
anim/web/templates/: base.html  dashboard.html  studio.html
docs/: agent-design.md  cinematic-workflow-design.md  systemdr-substack-topics.md  youtube-multi-ratio-layout.md
examples/: complex_workflow_demo.json  supply_chain_demo.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  design-tokens.css  index.css  types.ts
frontend/src/pages/: Studio.tsx
tests/: __init__.py  conftest.py  test_agents.py  test_blueprint_parser.py  test_blueprint_schema.py  test_cli.py  test_input.py  test_orchestrator.py  test_orchestrator_full.py  test_scene_builder.py  test_storage.py
